tests/ui/nll/relate_tys/var-appears-twice.stderr
error[E0597]: `b` does not live long enough
  --> $DIR/var-appears-twice.rs:20:38
   |
LL |     let b = 44;
   |         - binding `b` declared here
...
LL |     let x: DoubleCell<_> = make_cell(&b);
   |                            ----------^^-
   |                            |         |
   |                            |         borrowed value does not live long enough
   |                            assignment requires that `b` is borrowed for `'static`
...
LL | }
   | - `b` dropped here while still borrowed

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0597`.
